--- a/templates/home.HTML
+++ b/templates/home.HTML
@@ -71,11 +71,15 @@
               </ul>
     </div>
   </section>
-  <h2 id="h2"><span>Scholarsh</span>ip for all</h2>
-  <section class="cards">
+  
+<section>
+ <h2 id="h2"><span>Scholarsh</span>ip for all</h2>
+<div class="carousel-container">
+  <div class="carousel-scroll">
     <div class="card">
       <h3>Sitaram Jindal Foundation Scholarship Scheme</h3>
-      <a href="https://scholarshipforme.com/scholarships/sitaram-jindal-foundation-scholarship4439"><button>View details</button></a>    </div>
+      <a href="https://scholarshipforme.com/scholarships/sitaram-jindal-foundation-scholarship4439"><button>View details</button></a>
+    </div>
     <div class="card">
       <h3>Shriram Automall Education Scholarship Programme</h3>
       <a href="https://scholarshipforme.com/scholarships/shriram-automall-education-scholarship-programme"><button>View details</button></a>
@@ -83,21 +87,69 @@
     <div class="card">
       <h3>The Education Future International Scholarship</h3>
       <a href="https://scholarshipforme.com/scholarships/the-education-future-international-scholarship"><button>View details</button></a>
-      
     </div>
     <div class="card">
-        <h3>Punjab's Pre-Matric Scholarship  for OBC Students</h3>
-        <a href="https://scholarshipforme.com/scholarships/punjab-s-pre-matric-scholarship-program-for-obc-students"><button>View details</button></a>
-      </div>
+      <h3>Punjab's Pre-Matric Scholarship for OBC Students</h3>
+      <a href="https://scholarshipforme.com/scholarships/punjab-s-pre-matric-scholarship-program-for-obc-students"><button>View details</button></a>
+    </div>
+    <div class="card">
+      <h3>The Institute of Mathematical Sciences Post-Doctoral Fellowship (PDF)</h3>
+      <a href="https://scholarshipforme.com/scholarships/the-institute-of-mathematical-sciences-post-doctoral-fellowships-pdf-"><button>View details</button></a>
+    </div>
+    
+    <div class="card">
+      <h3>Jyoti Prakash Scholarship and Mentorship Program 2023-24</h3>
+      <a href="https://scholarshipforme.com/scholarships/jyoti-prakash-scholarship-and-mentorship-program-2023-24"><button>View details</button></a>
+    </div>
+    <div class="card">
+      <h3>FUEL Business School CSR Scholarship 2023-24</h3>
+      <a href="https://scholarshipforme.com/scholarships/fuel-business-school-csr-scholarship-2023-24"><button>View details</button></a>
+    </div><div class="card">
+      <h3>Dr A P J Abdul Kalam IGNITE</h3>
+      <a href="https://scholarshipforme.com/scholarships/dr-a-p-j-abdul-kalam-ignite"><button>View details</button></a>
+    </div><div class="card">
+      <h3>University of Southampton - Great Scholarships</h3>
+      <a href="https://scholarshipforme.com/scholarships/university-of-southampton---great-scholarships"><button>View details</button></a>
+    </div><div class="card">
+      <h3>Nursing Scholarship, Sasakawa India Leprosy Foundation</h3>
+      <a href="https://scholarshipforme.com/scholarships/nursing-scholarship-sasakawa-india-leprosy-foundation6850"><button>View details</button></a>
+    </div><div class="card">
+      <h3>University of Essex GREAT Scholarships</h3>
+      <a href="https://scholarshipforme.com/scholarships/university-of-essex-great-scholarships"><button>View details</button></a>
+    </div><div class="card">
+      <h3>Fulbright-Nehru Master's Fellowships</h3>
+      <a href="https://scholarshipforme.com/scholarships/fulbright-nehru-master-s-fellowships"><button>View details</button></a>
+    </div><div class="card">
+      <h3>Nottingham Global Full Scholarship</h3>
+      <a href="https://scholarshipforme.com/scholarships/nottingham-global-full-scholarship"><button>View details</button></a>
+    </div><div class="card">
+      <h3>AICTE Civil Engineering Internship (CEI)</h3>
+      <a href="https://scholarshipforme.com/scholarships/aicte-civil-engineering-internship-cei-"><button>View details</button></a>
+    </div><div class="card">
+      <h3>Goonj Urban Fellowship</h3>
+      <a href="https://scholarshipforme.com/scholarships/goonj-urban-fellowship"><button>View details</button></a>
+    </div><div class="card">
+      <h3>SBIF Asha Scholarship for IIM Students</h3>
+      <a href="https://scholarshipforme.com/scholarships/sbif-asha-scholarship-for-iim-students"><button>View details</button></a>
+    </div><div class="card">
+      <h3>Chanakya Scholarship</h3>
+      <a href="https://scholarshipforme.com/scholarships/chanakya-scholarship"><button>View details</button></a>
+    </div><div class="card">
+      <h3>DRDO-DESIDOC, Delhi Apprenticeship</h3>
+      <a href="https://scholarshipforme.com/scholarships/drdo-desidoc-delhi-apprenticeship"><button>View details</button></a>
+    </div><div class="card">
+      <h3>Orange Tulip Scholarship India</h3>
+      <a href="https://scholarshipforme.com/scholarships/orange-tulip-scholarship-india"><button>View details</button></a>
+    </div>
+  </div>
+</div>
   </section>
 
   <section class="testimony">
     <h1>Testimony</h1>
     
     <p>"I am absolutely thrilled with ScholarQuest.com! It has made findivng and applying for scholarships so much easier and more efficient. The user-friendly interface and comprehensive database have made it a valuable tool for students. Highly recommended to all aspiring students!"<br>– Student</p>
-    <div class="img">
-      <img src="chevron_right_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-    </div>
+  
   </section>
 
   <footer>
