--- a/static/dash.css
+++ b/static/dash.css
@@ -42,7 +42,7 @@ body {
   }
   
   .btn-modern-logout {
-    background: linear-gradient(135deg, #ff416c, #ff4b2b);
+    background: linear-gradient(135deg, #ff9a43, #ff9a43);
     color: white;
     padding: 10px 18px;
     border: none;
@@ -55,12 +55,12 @@ body {
   }
   
   .btn-modern-logout:hover {
-    background: linear-gradient(135deg, #ff4b2b, #ff416c);
+    background: linear-gradient(135deg,  #fb8823, #ff9a43);
     transform: translateY(-2px);
   }
   
   .back-btn {
-    background-color: #ffe5b4;
+    background-color: #ff9a43;
     border: none;
     border-radius: 50%;
     padding: 6px 10px;
@@ -116,10 +116,11 @@ body {
   .edit-profile-btn {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #ff9a43;
-    color: white;
+    background-color:#fff8dc;
+    color: black;
+    font-weight: 700px;
     margin-left:500px ;
-    border: none;
+    border: 2px solid #fb8823;
     border-radius: 25px;
     cursor: pointer;
     font-weight: 500;
@@ -129,6 +130,7 @@ body {
   
   .edit-profile-btn:hover {
     background-color: #ff7a00;
+    color:white;
   }
   
   /* Profile details grid */
