--- a/static/login.css
+++ b/static/login.css
@@ -91,7 +91,7 @@ input[type="submit"] {
   border-radius: 18px;
   outline: none;
   font-size: 20px;
-  margin:25px;
+  margin-top:25px;
   background-color: #FFB833;
 }
 input[type="button"] {
@@ -99,7 +99,9 @@ input[type="button"] {
   border: none;
   color: #FFB833;
   outline: none;
-  font-size: 25px;
+  margin-top: 15px;
+  font-size: 20px;
+  font-weight: bold;
   font-weight: 150px;
   
 }
