--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
             <label>Password</label>
             <input type="password" name="password" placeholder="Enter Password" class="input-field" required/>
 
-            <input type="submit" value="registration" class="input-field" onclick="setActionForm('registration')"/>
+            <input type="submit" value="Register" class="input-field" onclick="setActionForm('registration')"/>
        
             
             
